CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			SdaiIterator;
typedef	int64_t			ExpressID;
double			DECL STDC	getUnitConversionFactor(
									SdaiModel				model,
									const char				* unitType,
									const char				** unitPrefix,
									const char				** unitName,
									const char				** SIUnitName
								);
static	inline	double	getUnitConversionFactor(
								SdaiModel				model,
								char					* unitType,
								char					** unitPrefix,
								char					** unitName,
								char					** SIUnitName
							)
{
	return	getUnitConversionFactor(
					model,
					(const char*) unitType,
					(const char**) unitPrefix,
					(const char**) unitName,
					(const char**) SIUnitName
				);
}
void			DECL STDC	setBRepProperties(
									SdaiModel				model,
									int64_t					consistencyCheck,
									double					fraction,
									double					epsilon,
									int_t					maxVerticesSize
								);
void			DECL STDC	cleanMemory(
									SdaiModel				model,
									int_t					mode
								);
ExpressID		DECL STDC	internalGetP21Line(
									SdaiInstance			instance
								);
SdaiInstance	DECL STDC	internalGetInstanceFromP21Line(
									SdaiModel				model,
									ExpressID				P21Line
								);
const char		DECL * STDC	internalGetXMLID(
									SdaiInstance			instance,
									const char				** XMLID
								);
static	inline	const char	* internalGetXMLID(
									SdaiInstance			instance,
									char					** XMLID
								)
{
	return	internalGetXMLID(
					instance,
					(const char**) XMLID
				);
}
static	inline	const char	* internalGetXMLID(
									SdaiInstance			instance
								)
{
	return	internalGetXMLID(
					instance,
					(const char**) nullptr				
				);
}
int_t			DECL STDC	setStringUnicode(
									int_t					unicode
								);
void			DECL STDC	setFilter(
									SdaiModel				model,
									int_t					setting,
									int_t					mask
								);
int_t			DECL STDC	getFilter(
									SdaiModel				model,
									int_t					mask
								);
SdaiAggr		DECL STDC	xxxxGetEntityAndSubTypesExtent(
									SdaiModel				model,
									SdaiEntity				entity
								);
SdaiAggr		DECL STDC	xxxxGetEntityAndSubTypesExtentBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiAggr	xxxxGetEntityAndSubTypesExtentBN(
									SdaiModel				model,
									char					* entityName
								)
{
	return	xxxxGetEntityAndSubTypesExtentBN(
					model,
					(const char*) entityName
				);
}
SdaiAggr		DECL STDC	xxxxGetInstancesUsing(
									SdaiInstance			instance
								);
int_t			DECL STDC	xxxxDeleteFromAggregation(
									SdaiInstance			instance,
									const SdaiAggr			aggregate,
									int_t					elementIndex
								);
SdaiAttr		DECL STDC	xxxxGetAttrDefinitionByValue(
									SdaiInstance			instance,
									const void				* value
								);
const char		DECL * STDC	xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index,
									const char				** name
								);
static	inline	const char	* xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index,
									char					** name
								)
{
	return	xxxxGetAttrNameByIndex(
					instance,
					index,
					(const char**) name
				);
}
static	inline	const char	* xxxxGetAttrNameByIndex(
									SdaiInstance			instance,
									SdaiInteger				index
								)
{
	return	xxxxGetAttrNameByIndex(
					instance,
					index,
					(const char**) nullptr				
				);
}
SdaiInstance	DECL STDC	iterateOverInstances(
									SdaiModel				model,
									SdaiInstance			instance,
									SdaiEntity				* entity,
									const char				** entityName
								);
static	inline	SdaiInstance	iterateOverInstances(
										SdaiModel				model,
										SdaiInstance			instance,
										SdaiEntity				* entity,
										char					** entityName
									)
{
	return	iterateOverInstances(
					model,
					instance,
					entity,
					(const char**) entityName
				);
}
int_t			DECL STDC	iterateOverProperties(
									SdaiEntity				entity,
									SdaiInteger				index
								);
void			DECL * STDC	sdaiGetAggrByIterator(
									SdaiIterator			iterator,
									SdaiPrimitiveType		valueType,
									void					* value
								);
void			DECL STDC	sdaiPutAggrByIterator(
									SdaiIterator			iterator,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	void	sdaiPutAggrByIterator(
								SdaiIterator			iterator,
								SdaiPrimitiveType		valueType,
								SdaiInstance			value
							)
{
	return	sdaiPutAggrByIterator(
					iterator,
					valueType,
					(const void*) value
				);
}
void			DECL STDC	internalSetLink(
									SdaiInstance			instance,
									const char				* attributeName,
									int_t					linked_id
								);
static	inline	void	internalSetLink(
								SdaiInstance			instance,
								char					* attributeName,
								int_t					linked_id
							)
{
	return	internalSetLink(
					instance,
					(const char*) attributeName,
					linked_id
				);
}
void			DECL STDC	internalAddAggrLink(
									const SdaiAggr			aggregate,
									int_t					linked_id
								);
void			DECL STDC	engiGetNotReferedAggr(
									SdaiModel				model,
									int_t					* value
								);
void			DECL STDC	engiGetAttributeAggr(
									SdaiInstance			instance,
									int_t					* value
								);
void			DECL STDC	engiGetAggrUnknownElement(
									const SdaiAggr			aggregate,
									int_t					elementIndex,
									SdaiPrimitiveType		* valueType,
									void					* value
								);
int_t			DECL STDC	sdaiErrorQuery(
								);
void			DECL STDC	owlGetModel(
									SdaiModel				model,
									int64_t					* owlModel
								);
void			DECL STDC	owlGetInstance(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
void			DECL STDC	owlBuildInstance(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance
								);
void			DECL STDC	owlBuildInstances(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstanceComplete,
									int64_t					* owlInstanceSolids,
									int64_t					* owlInstanceVoids
								);
void			DECL STDC	owlGetMappedItem(
									SdaiModel				model,
									SdaiInstance			instance,
									int64_t					* owlInstance,
									double					* transformationMatrix
								);
int_t			DECL STDC	getInstanceDerivedPropertiesInModelling(
									SdaiModel				model,
									SdaiInstance			instance,
									double					* height,
									double					* width,
									double					* thickness
								);