C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


        [DllImport(STEPEngineDLL, EntryPoint = "getUnitConversionFactor")]
        public static extern double getUnitConversionFactor(Int64 model, byte[] unitType, out IntPtr unitPrefix, out IntPtr unitName, out IntPtr SIUnitName);

		//
		//		setBRepProperties                           (http://rdf.bg/ifcdoc/CS64/setBRepProperties.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setBRepProperties")]
        public static extern void setBRepProperties(Int64 model, Int64 consistencyCheck, double fraction, double epsilon, Int64 maxVerticesSize);

		//
		//		cleanMemory                                 (http://rdf.bg/ifcdoc/CS64/cleanMemory.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "cleanMemory")]
        public static extern void cleanMemory(Int64 model, Int64 mode);

		//
		//		internalGetP21Line                          (http://rdf.bg/ifcdoc/CS64/internalGetP21Line.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalGetP21Line")]
        public static extern Int64 internalGetP21Line(Int64 instance);

		//
		//		internalGetInstanceFromP21Line              (http://rdf.bg/ifcdoc/CS64/internalGetInstanceFromP21Line.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalGetInstanceFromP21Line")]
        public static extern Int64 internalGetInstanceFromP21Line(Int64 model, Int64 P21Line);

		//
		//		internalGetXMLID                            (http://rdf.bg/ifcdoc/CS64/internalGetXMLID.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalGetXMLID")]
        public static extern void internalGetXMLID(Int64 instance, out IntPtr XMLID);

		//
		//		setStringUnicode                            (http://rdf.bg/ifcdoc/CS64/setStringUnicode.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setStringUnicode")]
        public static extern Int64 setStringUnicode(Int64 unicode);

		//
		//		setFilter                                   (http://rdf.bg/ifcdoc/CS64/setFilter.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "setFilter")]
        public static extern void setFilter(Int64 model, Int64 setting, Int64 mask);

		//
		//		getFilter                                   (http://rdf.bg/ifcdoc/CS64/getFilter.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getFilter")]
        public static extern Int64 getFilter(Int64 model, Int64 mask);

        //
        //  Uncategorized API Calls
        //

		//
		//		xxxxGetEntityAndSubTypesExtent              (http://rdf.bg/ifcdoc/CS64/xxxxGetEntityAndSubTypesExtent.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtent")]
        public static extern Int64 xxxxGetEntityAndSubTypesExtent(Int64 model, Int64 entity);

		//
		//		xxxxGetEntityAndSubTypesExtentBN            (http://rdf.bg/ifcdoc/CS64/xxxxGetEntityAndSubTypesExtentBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtentBN")]
        public static extern Int64 xxxxGetEntityAndSubTypesExtentBN(Int64 model, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetEntityAndSubTypesExtentBN")]
        public static extern Int64 xxxxGetEntityAndSubTypesExtentBN(Int64 model, byte[] entityName);

		//
		//		xxxxGetInstancesUsing                       (http://rdf.bg/ifcdoc/CS64/xxxxGetInstancesUsing.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetInstancesUsing")]
        public static extern Int64 xxxxGetInstancesUsing(Int64 instance);

		//
		//		xxxxDeleteFromAggregation                   (http://rdf.bg/ifcdoc/CS64/xxxxDeleteFromAggregation.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxDeleteFromAggregation")]
        public static extern Int64 xxxxDeleteFromAggregation(Int64 instance, out int_t aggregate, Int64 elementIndex);

		//
		//		xxxxGetAttrDefinitionByValue                (http://rdf.bg/ifcdoc/CS64/xxxxGetAttrDefinitionByValue.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrDefinitionByValue")]
        public static extern Int64 xxxxGetAttrDefinitionByValue(Int64 instance, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrDefinitionByValue")]
        public static extern Int64 xxxxGetAttrDefinitionByValue(Int64 instance, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrDefinitionByValue")]
        public static extern Int64 xxxxGetAttrDefinitionByValue(Int64 instance, out IntPtr value);

		//
		//		xxxxGetAttrNameByIndex                      (http://rdf.bg/ifcdoc/CS64/xxxxGetAttrNameByIndex.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "xxxxGetAttrNameByIndex")]
        public static extern void xxxxGetAttrNameByIndex(Int64 instance, Int64 index, out IntPtr name);

		//
		//		iterateOverInstances                        (http://rdf.bg/ifcdoc/CS64/iterateOverInstances.html)
		//
		//	This function interates over all available instances loaded in memory, it is the fastest way to find all instances.
		//	Argument entity and entityName are both optional and if non-zero are filled with respectively the entity handle and entity name as char array.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "iterateOverInstances")]
        public static extern Int64 iterateOverInstances(Int64 model, Int64 instance, out int_t entity, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "iterateOverInstances")]
        public static extern Int64 iterateOverInstances(Int64 model, Int64 instance, out int_t entity, byte[] entityName);

		//
		//		iterateOverProperties                       (http://rdf.bg/ifcdoc/CS64/iterateOverProperties.html)
		//
		//	This function iterated over all available attributes of a specific given entity.
		//	This call is typically used in combination with iterateOverInstances(..).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "iterateOverProperties")]
        public static extern Int64 iterateOverProperties(Int64 entity, Int64 index);

		//
		//		sdaiGetAggrByIterator                       (http://rdf.bg/ifcdoc/CS64/sdaiGetAggrByIterator.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
        public static extern Int64 sdaiGetAggrByIterator(Int64 iterator, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
        public static extern Int64 sdaiGetAggrByIterator(Int64 iterator, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAggrByIterator")]
        public static extern Int64 sdaiGetAggrByIterator(Int64 iterator, Int64 valueType, out IntPtr value);

		//
		//		sdaiPutAggrByIterator                       (http://rdf.bg/ifcdoc/CS64/sdaiPutAggrByIterator.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAggrByIterator")]
        public static extern void sdaiPutAggrByIterator(Int64 iterator, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAggrByIterator")]
        public static extern void sdaiPutAggrByIterator(Int64 iterator, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiPutAggrByIterator")]
        public static extern void sdaiPutAggrByIterator(Int64 iterator, Int64 valueType, out IntPtr value);

		//
		//		internalSetLink                             (http://rdf.bg/ifcdoc/CS64/internalSetLink.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalSetLink")]
        public static extern void internalSetLink(Int64 instance, string attributeName, Int64 linked_id);

        [DllImport(STEPEngineDLL, EntryPoint = "internalSetLink")]
        public static extern void internalSetLink(Int64 instance, byte[] attributeName, Int64 linked_id);

		//
		//		internalAddAggrLink                         (http://rdf.bg/ifcdoc/CS64/internalAddAggrLink.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "internalAddAggrLink")]
        public static extern void internalAddAggrLink(Int64 list, Int64 linked_id);

		//
		//		engiGetNotReferedAggr                       (http://rdf.bg/ifcdoc/CS64/engiGetNotReferedAggr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetNotReferedAggr")]
        public static extern void engiGetNotReferedAggr(Int64 model, out int_t value);

		//
		//		engiGetAttributeAggr                        (http://rdf.bg/ifcdoc/CS64/engiGetAttributeAggr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttributeAggr")]
        public static extern void engiGetAttributeAggr(Int64 instance, out int_t value);

		//
		//		engiGetAggrUnknownElement                   (http://rdf.bg/ifcdoc/CS64/engiGetAggrUnknownElement.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrUnknownElement")]
        public static extern void engiGetAggrUnknownElement(out int_t aggregate, Int64 elementIndex, out int_t valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrUnknownElement")]
        public static extern void engiGetAggrUnknownElement(out int_t aggregate, Int64 elementIndex, out int_t valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrUnknownElement")]
        public static extern void engiGetAggrUnknownElement(out int_t aggregate, Int64 elementIndex, out int_t valueType, out IntPtr value);

		//
		//		sdaiErrorQuery                              (http://rdf.bg/ifcdoc/CS64/sdaiErrorQuery.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiErrorQuery")]
        public static extern Int64 sdaiErrorQuery();

        //
        //  Geometry Kernel related API Calls
        //

		//
		//		owlGetModel                                 (http://rdf.bg/ifcdoc/CS64/owlGetModel.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "owlGetModel")]
        public static extern void owlGetModel(Int64 model, out Int64 owlModel);

		//
		//		owlGetInstance                              (http://rdf.bg/ifcdoc/CS64/owlGetInstance.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "owlGetInstance")]
        public static extern void owlGetInstance(Int64 model, Int64 instance, out Int64 owlInstance);

		//
		//		owlBuildInstance                            (http://rdf.bg/ifcdoc/CS64/owlBuildInstance.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "owlBuildInstance")]
        public static extern void owlBuildInstance(Int64 model, Int64 instance, out Int64 owlInstance);

		//
		//		owlBuildInstances                           (http://rdf.bg/ifcdoc/CS64/owlBuildInstances.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "owlBuildInstances")]
        public static extern void owlBuildInstances(Int64 model, Int64 instance, out Int64 owlInstanceComplete, out Int64 owlInstanceSolids, out Int64 owlInstanceVoids);

		//
		//		owlGetMappedItem                            (http://rdf.bg/ifcdoc/CS64/owlGetMappedItem.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "owlGetMappedItem")]
        public static extern void owlGetMappedItem(Int64 model, Int64 instance, out Int64 owlInstance, out double transformationMatrix);

		//
		//		getInstanceDerivedPropertiesInModelling     (http://rdf.bg/ifcdoc/CS64/getInstanceDerivedPropertiesInModelling.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "getInstanceDerivedPropertiesInModelling")]
        public static extern Int64 getInstanceDerivedPropertiesInModelling(Int64 model, Int64 instance, out double height, out double width, out double thickness);
